CSS: Fix cut of text in table of popup content
Whenever the key or value is too long, the table was pushed being wider than the given container. And the overflow rules cut off the content of the table.

Fixes
- Remove overflow rules (reset to defaults, which is `auto`), which makes a scroll bar show up if content is too wide
- Let long text break in lines instead of pushing the table (which in turn prevents the scroll bar from showing up)

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -1283,14 +1283,16 @@ a.add-datalayer:hover,
 .umap-popup-content {
     max-height: 500px;
     flex-grow: 1;
-    overflow-y: auto;
-    overflow-x: hidden;
     margin-bottom: 4px;
     display: flex;
     flex-direction: column;
 }
 .umap-popup-content iframe {
     min-width: 310px;
+}
+.umap-popup-content th,
+.umap-popup-content td {
+    word-break: break-word;
 }
 .umap-popup-container {
     flex-grow: 1;
